# mmcp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/mmcp/: Cargo.toml  README.md
crates/mmcp-axum/: Cargo.toml
crates/mmcp-client/: Cargo.toml  README.md
crates/mmcp-client-stdio/: Cargo.toml  README.md
crates/mmcp-macros/: Cargo.toml  README.md
crates/mmcp-macros/src/: lib.rs  tool.rs
crates/mmcp-protocol/: Cargo.toml  README.md
crates/mmcp-protocol/src/: consts.rs  lib.rs  mcp.rs  port.rs
crates/mmcp-rpc/: Cargo.toml  README.md
crates/mmcp-rpc/src/: lib.rs  port.rs
crates/mmcp-rpc/src/protocol/: mcp.rs
crates/mmcp-server/: Cargo.toml  README.md
crates/mmcp-server-axum/: Cargo.toml  README.md
crates/mmcp-server-axum/src/: lib.rs
crates/mmcp-server-stdio/: Cargo.toml  README.md
crates/mmcp-server-stdio/src/: lib.rs
crates/mmcp-server/src/: inventory.rs  lib.rs  notification_handlers.rs  primitives.rs  runtime.rs
crates/mmcp-server/src/primitives/: prompt.rs  tool.rs
crates/mmcp-server/src/runtime/: request_handlers.rs
crates/mmcp-stdio/: Cargo.toml
crates/mmcp-types-gen/: Cargo.toml
crates/mmcp-types-gen/src/: generator.rs  json_schema.rs  main.rs  type_registry.rs
crates/mmcp/src/: lib.rs  protocol.rs  schemars.rs
crates/mmcp/src/primitives/: tool.rs
crates/mmcp/src/protocol/: mcp.rs
examples/calc/: Cargo.toml
examples/calc/src/: main.rs
examples/uuid/: Cargo.toml
examples/uuid-schemars08/: Cargo.toml
examples/uuid/src/: main.rs
