[workspace]
members = ["crates/*", "examples/*"]

exclude = ["examples/uuid-schemars08"]

resolver = "3"

[workspace.dependencies]
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.44" }
schemars08 = { version = "0.8", package = "schemars" }
schemars1 = { version = "1.0.0-alpha.17", package = "schemars" }
mmcp = { path = "crates/mmcp" }
mmcp-macros = { path = "crates/mmcp-macros" }
mmcp-server-axum = { path = "crates/mmcp-server-axum" }
mmcp-server-stdio = { path = "crates/mmcp-server-stdio" }
mmcp-client-stdio = { path = "crates/mmcp-client-stdio" }
mmcp-server = { path = "crates/mmcp-server" }
mmcp-client = { path = "crates/mmcp-client" }
mmcp-protocol = { path = "crates/mmcp-protocol" }
mmcp-rpc = { path = "crates/mmcp-rpc" }
anyhow = { version = "1.0" }
thiserror = { version = "2.0" }
futures = { version = "0.3" }
