[workspace]
members = ["crates/*", "examples/*"]

exclude = ["examples/uuid-schemars08"]

resolver = "3"

[workspace.dependencies]
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.44" }
schemars08 = { version = "0.8", package = "schemars" }
schemars1 = { version = "1.0.0-alpha.17", package = "schemars" }
anyhow = { version = "1.0" }
thiserror = { version = "2.0" }
futures = { version = "0.3" }

mmcp = { path = "crates/mmcp", version = "0.1.0" }
mmcp-macros = { path = "crates/mmcp-macros", version = "0.1.0" }
mmcp-server-axum = { path = "crates/mmcp-server-axum", version = "0.1.0" }
mmcp-server-stdio = { path = "crates/mmcp-server-stdio", version = "0.1.0" }
mmcp-client-stdio = { path = "crates/mmcp-client-stdio", version = "0.1.0" }
mmcp-server = { path = "crates/mmcp-server", version = "0.1.0" }
mmcp-client = { path = "crates/mmcp-client", version = "0.1.0" }
mmcp-protocol = { path = "crates/mmcp-protocol", version = "0.1.0" }
mmcp-rpc = { path = "crates/mmcp-rpc", version = "0.1.0" }
