[package]
name = "mmcp-client-stdio"
version = "0.1.0"
edition = "2024"
description = "Standard I/O client adapter for the MMCP framework."
homepage = "https://github.com/ryo33/mmcp"
repository = "https://github.com/ryo33/mmcp"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["mcp", "stdio"]
categories = []

[dependencies]
