[package]
name = "mmcp-client"
version = "0.1.0"
edition = "2024"
description = "Client implementation for the MMCP framework."
homepage = "https://github.com/ryo33/mmcp"
repository = "https://github.com/ryo33/mmcp"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["mcp"]
categories = []

[dependencies]
mmcp-rpc = { workspace = true }
