[package]
name = "mmcp-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for the MMCP framework."
homepage = "https://github.com/ryo33/mmcp"
repository = "https://github.com/ryo33/mmcp"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["mcp"]
categories = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
convert_case = "0.8"
darling = "0.20.11"
