[package]
name = "mmcp-protocol"
version = "0.1.0"
edition = "2024"
description = "Protocol definitions for the MMCP framework."
homepage = "https://github.com/ryo33/mmcp"
repository = "https://github.com/ryo33/mmcp"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["mcp"]
categories = []

[dependencies]
# for types
serde = { workspace = true, features = ["derive"] }
serde_with = { version = "3.12", features = ["base64"] }
serde_json = { workspace = true, features = ["raw_value"] }
monostate = "0.1"
indexmap = { version = "2.9", features = ["serde"] }

# for ports
anyhow = { workspace = true }
thiserror = { workspace = true }
