[package]
name = "mmcp-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
mmcp-protocol = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"], optional = true }

[features]
runtime = ["dep:tokio"]
