[package]
name = "mmcp-rpc"
version = "0.1.0"
edition = "2024"
description = "RPC implementation for the MMCP framework."
homepage = "https://github.com/ryo33/mmcp"
repository = "https://github.com/ryo33/mmcp"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["mcp", "rpc"]
categories = []

[dependencies]
mmcp-protocol = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
