[package]
name = "mmcp-server-stdio"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
mmcp-server = { workspace = true }
mmcp-protocol = { workspace = true }
mmcp-rpc = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
anyhow = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
