[package]
name = "mmcp-server-stdio"
version = "0.1.0"
edition = "2024"
description = "Standard I/O adapter for the MMCP server framework."
homepage = "https://github.com/ryo33/mmcp"
repository = "https://github.com/ryo33/mmcp"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["mcp", "stdio"]
categories = []

[dependencies]
mmcp-server = { workspace = true }
mmcp-protocol = { workspace = true }
mmcp-rpc = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
anyhow = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
