[package]
name = "mmcp-server"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
mmcp-protocol = { workspace = true }
mmcp-rpc = { workspace = true }

futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
inventory = { version = "0.3" }
anyhow = { workspace = true }
