[package]
name = "mmcp-server"
version = "0.1.0"
edition = "2024"
description = "Server implementation for the MMCP framework."
homepage = "https://github.com/ryo33/mmcp"
repository = "https://github.com/ryo33/mmcp"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["mcp"]
categories = []

[dependencies]
mmcp-protocol = { workspace = true }
mmcp-rpc = { workspace = true }

futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
inventory = { version = "0.3" }
anyhow = { workspace = true }
