[package]
name = "mmcp"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
mmcp-rpc = { workspace = true }
mmcp-server = { workspace = true, optional = true }
mmcp-client = { workspace = true, optional = true }
mmcp-server-stdio = { workspace = true, optional = true }
mmcp-server-axum = { workspace = true, optional = true }
mmcp-macros = { workspace = true, optional = true }
mmcp-protocol = { workspace = true }

schemars1 = { workspace = true, optional = true, features = [
	"derive",
	"preserve_order",
] }
schemars08 = { workspace = true, optional = true, features = [
	"derive",
	"preserve_order",
] }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }

[features]
default = ["schemars1", "macros"]
schemars1 = ["dep:schemars1"]
schemars08 = ["dep:schemars08"]
macros = ["dep:mmcp-macros"]
server = ["dep:mmcp-server", "mmcp-rpc/runtime"]
client = ["dep:mmcp-client", "mmcp-rpc/runtime"]
server-stdio = ["dep:mmcp-server-stdio", "server"]
server-axum = ["dep:mmcp-server-axum", "server"]
