[package]
name = "mmcp-uuid"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mmcp = { workspace = true, features = ["server-stdio"] }
uuid = { version = "1", features = ["v4"] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = { workspace = true, features = ["preserve_order"] }
